<resources>
    <string name="app_name">APIteste</string>
    <string name="action_new_user">Cadastrar Usuário</string>
    <string name="action_information">Sobre o APP</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="user_status">Usuário Ativo </string>
    <string name="user_email">E-mail </string>
    <string name="user_occupation">Função </string>
        <string name="tech_n1">Técnico N1 </string>
        <string name="tech_n2">Técnico N2 </string>
        <string name="supervisor">Supervisor </string>
        <string name="manager">Gerente </string>
    <string name="user_full_name">Nome Completo </string>
    <string name="user_display_name">Nome de Exibição </string>
    <string name="user_password">Senha </string>
    <string name="user_cell_phone">Telefone Celular </string>
    <string name="user_comm_phone">Telefone Comercial </string>
    <string name="user_cancel">Cancelar </string>
    <string name="user_save">Salvar </string>
    <string name="user_delete">Excluir </string>
    <string name="user_search">Pesquisar </string>
    <string name="register_user">Cadastrar Usuário </string>
    <string name="about_app">Sobre o APP </string>


    <string name="ERROR_UNEXPECTED">Um erro inesperado aconteceu.</string>
    <string name="login_successful">Logado com sucesso!</string>
    <string name="login_problem">Problema ao logar.</string>

    
</resources>
